# intellagent

./: README.md  pyproject.toml
docs/: installation.md
