[project]
name = "intellagent"
version = "0.1.0"
description = "Simulate interactions, analyze performance, and gain actionable insights for conversational agents"
authors = [
    {name = "Plurai AI", email = "info@plurai.ai"},
]
requires-python = ">=3.9"
readme = "README.md"
license = {file = "LICENSE"}

dependencies = [
    "google-cloud-aiplatform==1.75.0",
    "anthropic[vertex]==0.42.0",
    "langchain-google-vertexai==2.0.9",
    "langchain==0.3.7",
    "langchain-core==0.3.15",
    "langchain-openai==0.2.5",
    "langgraph==0.2.44",
    "pandas==2.2.3",
    "langchain-community==0.3.5",
    "networkx==3.2.1",
    "streamlit==1.39.0",
    "plotly==5.24.1",
    "langchain-google-genai==2.0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 